--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "description": "Server for Admin Board",
   "main": "app.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+
   },
   "author": "Swaniket Chowdhury",
   "license": "ISC",
